<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/millioner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/counterTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/counter"
            android:textColor="@color/white"
            android:textSize="21sp" />

        <TextView
            android:id="@+id/num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="21sp"
            android:text="@string/start"
            android:textColor="@color/white"
            android:layout_marginStart="110dp"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            android:gravity="center"
            android:text="@string/taskFor1"
            android:textColor="@color/white"
            android:textSize="25sp"/>

        <Button
            android:id="@+id/rightButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginTop="380dp"
            android:text="@string/var1For1"/>

        <Button
            android:id="@+id/falseButton1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginTop="450dp"
            android:text="@string/var2For1" />

        <Button
            android:id="@+id/falseButton2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="450dp"
            android:text="@string/var3For1" />

        <Button
            android:id="@+id/falseButton3"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="380dp"
            android:text="@string/var4For1" />
    </RelativeLayout>


</android.support.constraint.ConstraintLayout>